technologies/deployment-pipelines/flask-blog-cd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: blog-app
  labels:
      type: blog
spec:
  selector:
    matchLabels:
      app: flask-app
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-app
        type: blog
    spec:
      tolerations:
      - key: kubernetes.io/hostname
        operator: Equal
        value: kind-control-plane
        effect: NoSchedule
      containers:
      - name: flask-app
        image: opeomotayo/flask-blog:17
        # https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
