technologies/deployment-pipelines/flask-blog-cd/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful-set
  namespace: blog-app
spec:
  selector:
    matchLabels:
      db: mysql-instance
  serviceName:  mysql-service
  replicas: 1
  template:
    metadata:
      labels:
        db: mysql-instance
        app: flask-app
    spec:
      tolerations:
      - key: kubernetes.io/hostname
        operator: Equal
        value: kind-control-plane
        effect: NoSchedule
      containers:
      - name: mysql
        image: opeomotayo/mysql-blog:7
        ports:
        - containerPort: 3306
          name: database
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        - name: init-script
          mountPath: "/docker-entrypoint-initdb.d"
          readOnly: true
      volumes:
        - name: init-script
          configMap:
            name: mysql-init-script

  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
