technologies/deployment-pipelines/flask-blog-cd/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: blog-app
  labels:
    app: flask-app  
spec:
  selector:
    type: blog
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30423
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: blog-app
  labels:
    app: flask-app    
spec:
  ports:
    - port: 3306
  selector:
    db: mysql-instance
  clusterIP: None
